...
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/detail_subscription_amount"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="391dp"
        android:ems="2"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginBottom="314dp"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11">

        <AutoCompleteTextView
            android:id="@+id/AutoComplete_drop_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="77dp"
            tools:layout_editor_absoluteY="409dp" />
...
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="400dp"
        android:text="Payment Amount: $"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="328dp"
        android:text="Frequency:"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/detail_subscription_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="460dp"
        android:ems="10"
        android:text=""
...
        android:text="Add Existing Tag"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/details_edit_subscription"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:background="@null"
        android:text="Edit subscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:text="Go Back"
...
