...
        android:text="Add Subscriptions"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="38dp" />


    <ImageButton
        android:id="@+id/sort_button"
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="112dp"
        android:layout_toEndOf="@+id/add_subscription_button"
...
        android:background="#fffee0"
        />



    <Switch
        android:id="@+id/fitler_match_any_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="26dp"
...
