<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/filter_list"
        android:title="@string/filter_option_title" />

    <item
        android:id="@+id/sort_a_z"
        android:title="@string/sort_a_z" />

    <item
        android:id="@+id/sort_payment"
        android:title="@string/sort_payment" />

    <item
        android:id="@+id/sort_frequency"
        android:title="@string/sort_frequency" />

  
</menu>