...
    <string name="select">Select Item</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="sort_payment">Sort by Payment</string>
    <string name="sort_frequency">Sort by frequency</string>


    <string name="filter_option_title">Filter by tags</string>
    <string name="apply_filter_confirmation">Apply</string>
    <string name="clear_filter_confirmation">Clear</string>


    <string name="tag_color1">#ffa26e</string>
    <string name="tag_color2">#ff00ae</string>
    <string name="tag_color3">#cad2c5</string>
...
